// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<sub-annotation-item-stub annotationclass="[object Object]" type="directional_vector" class="directional-vector-item">
  A: 180.00° L: 100.11px
</sub-annotation-item-stub>
`;

exports[`matches snapshot when readonly 1`] = `
<sub-annotation-item-stub annotationclass="[object Object]" type="directional_vector" readonly="true" class="directional-vector-item">
  A: 180.00° L: 100.11px
</sub-annotation-item-stub>
`;
